--- a/src/components/IconButton/IconButton.scss
+++ b/src/components/IconButton/IconButton.scss
@@ -11,11 +11,19 @@ $main-color: #626C80;
     justify-content: flex-end;
     margin: 0 2vw;
     padding: 1vw;
-    width: 14vw;
+    width: 24vw;
 
     img {
         margin-bottom: 0.8vh;
+        width: 20vw;
+    }
+
+    @media (min-width: 1024px) {
+        width: 14vw;
+
+    img {
         width: 10vw;
+    }
     }
 
     &:hover {
