--- a/src/index.scss
+++ b/src/index.scss
@@ -15,24 +15,24 @@ body {
 
 h1 {
   font-size: 6vw;
-  margin-bottom: 6vh;
+  margin-bottom: 4vh;
   text-transform: uppercase;
 }
 
 h2 {
   font-size: 5vw;
   font-weight: normal;
-  margin: 0 auto 4vh;
+  margin: 4vh auto;
 }
 
 h3 {
   font-size: 4vw;
-  margin: 0 auto 2vh;
+  margin: 0 auto 4vh;
 }
 
-p, input {
+p, input, button {
   font-size: 3vw;
-  margin: 0 auto 1vh;
+  margin: 0 auto 2vh;
 }
 
 @media (min-width: 1024px) {
@@ -43,7 +43,7 @@ p, input {
   
   h2 {
     font-size: 3.75vw;
-    margin: 0 auto 2vh;
+    margin: 2vh auto;
   }
   
   h3 {
@@ -51,7 +51,7 @@ p, input {
     margin: 0 auto 1vh;
   }
   
-  p, input {
+  p, input, button {
     font-size: 2.25vw;
   }
 }
@@ -63,4 +63,8 @@ p, input {
 
 button {
   color: white;
+}
+
+.bold {
+  font-weight: bold;
 }
